Disable dates through config --- There are some use cases when not all dates should be available for selection. For example, while performing a flight search, it makes sense to prevent the user from selecting a date on which there are no flights available, or past dates. Changes in this commit enable developers to set `isDisabled` function in the config of the date picker. If the function returns true for a specific date, users will not be able to select that date. To minmize the impact on the performace, this function has been defined as `Maybe`, with default value `Nothing`. - Also, new datepicker input has been added to the demo, to illustrate these changes. - Additionaly, list-extra was updated to a newer version, generated new bundled css, days in calendar are now wrapped in spans to enable some UX improvements.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,6 +142,16 @@
     background-color: #d5e5f3;
 }
 
+.elm-input-datepickerDialog > .elm-input-datepickerDatePickerDialog > .elm-input-datepickerCalendar  .elm-input-datepickerDisabled {
+    color: #ccc;
+    background-color: #f5f5f5;
+    cursor: default;
+}
+
+.elm-input-datepickerDialog > .elm-input-datepickerDatePickerDialog > .elm-input-datepickerCalendar  .elm-input-datepickerDisabled:hover {
+    background-color: #f5f5f5;
+}
+
 .elm-input-datepickerDialog > .elm-input-datepickerDatePickerDialog > .elm-input-datepickerFooter {
     text-align: center;
     background-color: #f5f5f5;
